modified front-end of article-display

--- a/stucampus/static/styles/articles/duoshuo.css
+++ b/stucampus/static/styles/articles/duoshuo.css
@@ -151,6 +151,28 @@
         z-index: 100;
         transition:left 0.5s ease-in;
     }
+    .add-comment-cover{
+        display: none;
+        position: absolute;
+        bottom: 0;
+        left: -21.8rem;
+        margin:0.8rem 0;
+        height: 3.46667rem;
+        line-height: 3.46667rem;
+        width: 21.8rem;
+        background-color: rgba(224,242,241 ,0.3);
+        z-index: 101;
+        transition:left 0.5s ease-in;
+        text-align: center;
+        font-size: 0.8em;
+    }
+    .add-comment-cover a{
+        text-decoration: none;
+        color: rgba(56, 195, 169, 0.68);
+    }
+    .add-comment-cover a:hover{
+        color: #38c2a8;
+    }
     .backarticalfoot{
         position: absolute;
         top: 1.6rem;
@@ -253,6 +275,9 @@
         font-size: 0.6rem;
         color: rgba(0,0,0,0.87);
     }
+    .message span{
+    color: #7e7e7e;
+    }
     .background{
         display: none;
         position: fixed;
@@ -315,6 +340,26 @@
         width: 100%;
         background-color: #FDFDFD;
         z-index: 100;
+    }
+    .add-comment-cover{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        margin:1.6rem 0;
+        height: 3.46667rem;
+        line-height: 3.46667rem;
+        width: 100%;
+        background-color: rgba(224,242,241 ,0.3);
+        z-index: 101;
+        font-size: 0.8em;
+        text-align: center;
+    }
+    .add-comment-cover a{
+        text-decoration: none;
+        color: rgba(56, 195, 169, 0.68);
+    }
+    .add-comment-cover a:hover{
+        color: #38c2a8;
     }
     .backarticalfoot{
         display: none;
