--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -5,9 +5,6 @@
 }
 body{
     background-color: #eee;
-    background: url(/static/images/index/halloween_background.png) fixed no-repeat;
-    background-size: cover;
-    background-position-y:100%;
 }
 @media screen and (max-width: 767px){
 	@media screen and (max-width: 640px){
@@ -34,7 +31,7 @@ body{
 	    left: 0;
 	    height: 3.466667rem;
 	    width: 100%;
-	    background-color: /*#5BC5BE*/ #e5a422;
+	    background-color: #5BC5BE ;
 	    box-shadow: 0 0.2rem 0.2rem rgba(0,0,0,0.16);
 	    z-index: 999;
 	}
@@ -248,7 +245,7 @@ body{
 		width: 25rem;
 		padding:0 0 1.06667rem 0;
 		font-size: 0.6rem;
-		color: /*rgba(0,0,0,0.54)*/ #e5a422;
+		color: rgba(0,0,0,0.54) ;
 		text-align: center;
 		font-family: "SourceHanSans-Light","Roboto-Light","Microsoft YaHei";
 	}
@@ -326,12 +323,12 @@ body{
 	    float: left;
 	}
 	.nav-active{
-	    color: /*#5BC5BE*/ #e5a422  !important;
+	    color: #5BC5BE  !important;
 	}
 	.now{
 	    position: absolute;
 	    height: 1.6rem !important;
-	    border-bottom: 4px solid /*#5BC5BE*/ #e5a422;
+	    border-bottom: 4px solid #5BC5BE;
 	    transition: left 0.3s ease-in-out;
 	    -moz-transition: left 0.3s ease-in-out; /* Firefox 4 */
 	    -webkit-transition: left 0.3s ease-in-out; /* Safari 和 Chrome */
