--- a/stucampus/static/styles/articles/article-pc.css
+++ b/stucampus/static/styles/articles/article-pc.css
@@ -47,7 +47,7 @@
     float: left;
 }
 .nav-active{
-    color: /*#5BC5BE*/ #e5a422 !important;
+    color: #5BC5BE !important;
 }
 .header ul li a{
     display: block;
