update the index page

--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -89,7 +89,7 @@
             <div class="sidenav">
                     <p class="card-title">深大导航</p>
                     <div class="nav-content">
-                        <a href="http://www.szu.edu.cn/board/" target="_blank">公文通</a>
+                        <a href="http://stu.szu.edu.cn/board/" target="_blank">公文通</a>
                         <a href="http://elearning.szu.edu.cn/" target="_blank">Blackboard</a>
                         <a href="https://exmail.qq.com/domain/email.szu.edu.cn" target="_blank">学生邮箱</a>
                         <a href="http://stu.szu.edu.cn:8080/" target="_blank">校园场地申请</a>
@@ -108,6 +108,7 @@
                         <a href="http://192.168.2.168/paike/selectXYMC_BJMC.asp" target="_blank">排课查询</a>
                         <a href="http://192.168.240.168/xuanke/edu_login.asp" target="_blank">网上选课</a>
                         <a href="http://192.168.2.20/axsxx/AASZUstd.ASP" target="_blank">绩点查询</a>
+                        <a href="http://stu.szu.edu.cn/gobye/" target="_blank">gobye|学分查询</a>
                         <a href="http://swzx.szu.edu.cn/swzx_view_affair_details.asp?affair_id=14c99c402ddab519" target="_blank">联系老师</a>
                     </div>
             </div>
