update the requirements and fix some bug in the index page

--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -108,8 +108,8 @@
                         <a href="http://192.168.2.168/paike/selectXYMC_BJMC.asp" target="_blank">排课查询</a>
                         <a href="http://192.168.240.168/xuanke/edu_login.asp" target="_blank">网上选课</a>
                         <a href="http://192.168.2.20/axsxx/AASZUstd.ASP" target="_blank">绩点查询</a>
-                        <a href="http://stu.szu.edu.cn/gobye/" target="_blank">gobye|学分查询</a>
                         <a href="http://swzx.szu.edu.cn/swzx_view_affair_details.asp?affair_id=14c99c402ddab519" target="_blank">联系老师</a>
+                        <a href="http://stu.szu.edu.cn/gobye/" target="_blank">gobye | 学分查询（测试版）</a>
                     </div>
             </div>
             <div class="side-card">
