--- a/stucampus/templates/gobye/login.html
+++ b/stucampus/templates/gobye/login.html
@@ -91,4 +91,14 @@
         }
     }
 </script>
+<!-- 百度统计start -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?4d0c962b688eb374c3f0a499db3087a4";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </html>
