--- a/stucampus/templates/gobye/login.html
+++ b/stucampus/templates/gobye/login.html
@@ -4,16 +4,17 @@
     <link rel="stylesheet" type="text/css" href="/static/styles/gobye/login.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>学分统计小工具</title>
+    <title>学分统计小工具--学子天地</title>
 </head>
 <body>
     <div class="container">
         <div class="main">
             <div class="header">
-                <div class="title">学分统计小工具</div>
+                <div class="logo"> <img src="http://stu.szu.edu.cn/static/images/stucampus_logo.png"> </div>
+                <div class="title">学分统计小工具<sup>BETA</sup><br>学子天地出品</div>
                 <div class="information"><a href="http://192.168.2.20/axsxx/AASZUstd.ASP"
                     target="_blank" class="btn">
-                    点击进入学生信息查询系统
+                    学生信息查询系统
                 </a></div>
             </div>
             <div class="content">
