--- a/stucampus/templates/gobye/login.html
+++ b/stucampus/templates/gobye/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="main">
             <div class="header">
-                <div class="logo"> <img src="http://stu.szu.edu.cn/static/images/stucampus_logo.png"> </div>
+                <div class="logo"> <img src="http://stu.szu.edu.cn/static/images/stucampus_logo.png" onclick="window.open('http://stu.szu.edu.cn', '_blank')"> </div>
                 <div class="title">学分统计小工具<sup>BETA</sup><br>学子天地出品</div>
                 <div class="information"><a href="http://192.168.2.20/axsxx/AASZUstd.ASP"
                     target="_blank" class="btn">
