--- a/stucampus/templates/gobye/result.html
+++ b/stucampus/templates/gobye/result.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>Title</title>
-    <link rel="stylesheet" href="/static/styles/gobye/result.css">
+    {% load html_tools %}
+    {{ 'gobye/result.css'| as_css }}
 </head>
 <body>
     <script>
@@ -18,6 +19,7 @@
             "double": 0.0
         };
     </script>
+    <div class="logo"> <img src="http://stu.szu.edu.cn/static/images/stucampus_logo.png" onclick="window.open('http://stu.szu.edu.cn', '_blank')"> </div>
     <div class="dialog">
         <h1>你还差 <strong id="totalNeed"></strong> 个 学分</h1>
         <p><a href="/gobye/feedback/" style="display: inline-block;color: red;font-size: 18px">反馈</a></p>
