fixed the page can't show complete in some mobile

--- a/stucampus/static/styles/gobye/login.css
+++ b/stucampus/static/styles/gobye/login.css
@@ -33,6 +33,12 @@ h1, p, .title {
   display: flex;
   align-items: center;
   position: relative;
+  overflow: auto;
+}
+@media only screen and (max-height: 38em){
+    .container{
+        display: block;
+    }
 }
 
 /* 外框 */
