--- a/stucampus/templates/gobye/result.html
+++ b/stucampus/templates/gobye/result.html
@@ -632,7 +632,7 @@
     <div class="pretty-table">
 
         <table cellpadding="0" cellspacing="0" border="0">
-            <caption>此次分析所用到的培养方案</caption>
+            <caption>培养方案来源</caption>
             <tbody>
                 {% for url in programUrl %}
                 <tr>
