add random profile

--- a/stucampus/templates/articles/article-display.html
+++ b/stucampus/templates/articles/article-display.html
@@ -82,7 +82,7 @@
                 {% for comment in comments %}
                 <div class="comments">
                     <div class="user_info">
-                        <img class="avatar" src="/static/images/articles/avatar.jpg" alt="{{comment.author.name}}'s avatar">
+                        <img class="avatar" src="#" alt="{{comment.author.name}}'s avatar">
                         <p class="name" >{{ comment.author.name }}</p>
                         <p class="c_createtime">{{ comment.created_at }}</p>
                         <
