修复文字错误

--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -89,7 +89,7 @@
             <div class="sidenav">
                     <p class="card-title">深大导航</p>
                     <div class="nav-content">
-                        <a href="http://stu.szu.edu.cn/board/" target="_blank">团委之声</a>
+                        <a href="http://stu.szu.edu.cn/board/" target="_blank">团学动态</a>
                         <a href="http://elearning.szu.edu.cn/" target="_blank">Blackboard</a>
                         <a href="https://exmail.qq.com/domain/email.szu.edu.cn" target="_blank">学生邮箱</a>
                         <a href="http://stu.szu.edu.cn:8080/" target="_blank">校园场地申请</a>
