--- a/stucampus/static/styles/articles/article-pc.css
+++ b/stucampus/static/styles/articles/article-pc.css
@@ -47,7 +47,7 @@
     float: left;
 }
 .nav-active{
-    color: #5BC5BE !important;
+    color: /*#5BC5BE*/ #f0a055 !important;/*font */
 }
 .header ul li a{
     display: block;
