Temporarily remove "COMMENTS" side card

--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -120,7 +120,7 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="side-card">
+            <!-- <div class="side-card">
                 <p class="card-title">最新评论</p>
                 {% if comments %}
                     {% for comment in comments %}
@@ -135,7 +135,7 @@
                     </div>
                     {% endfor %}
                 {% endif %}
-            </div>
+            </div> -->
             <div class="side-card">
                 <div class="shadow">
                     <p class="card-title">最近访客</p>
