fixed the url error

--- a/stucampus/templates/christmas/index.html
+++ b/stucampus/templates/christmas/index.html
@@ -18,8 +18,8 @@
         <div class="weui-msg__desc">请选择您要做的操作</div>
         <div class="weui-flex weui-msg__opr-area center">
             <div class="weui-btn-area">
-                <a class="weui-btn weui-btn_primary" href="giftList/" >我要送礼</a>
-                <a href="giftResult/" class="weui-btn weui-btn_primary">我收到的礼物</a>
+                <a class="weui-btn weui-btn_primary" href="/christmas/giftList/" >我要送礼</a>
+                <a href="/christmas/giftResult/" class="weui-btn weui-btn_primary">我收到的礼物</a>
             </div>
         </div>
     </div>
