--- a/stucampus/static/styles/index-pc.css
+++ b/stucampus/static/styles/index-pc.css
@@ -31,7 +31,7 @@
     bottom: 0 !important;
     width: 0.6rem;
     height: 0.6rem;
-	background-color: /*rgb(91,197,190)*/ #f0a055; /*font */
+	background-color: rgb(91,197,190); /*font */
 }
 .swiper-slide ,.swiper-slide a{
     position: relative;
@@ -245,7 +245,7 @@
     left: 0.8rem;
     padding-top: 0.8rem;
     display: block;
-    color: /*#5BC5BE*/ #f0a055 ; /* font*/
+    color: #5BC5BE ; /* font*/
     font-size: 0.6rem;
     font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei";
     letter-spacing: 0.12rem;
@@ -282,7 +282,7 @@
     -o-transition: background-color 0.3s ease-out,color 0.3s ease-out; /* Opera */
 }
 .nav-content a:hover{
-    background-color: /*#5BC5BE*/ #f0a055 ;/*font */
+    background-color: #5BC5BE ;/*font */
     color: rgb(255,255,255);
 }
 
