--- a/stucampus/templates/christmas/addExchange.html
+++ b/stucampus/templates/christmas/addExchange.html
@@ -101,5 +101,16 @@
     {{ 'christmas/jquery.form.min.js' | as_js }}
     {{ 'christmas/weui.js' | as_js }}
     {{ 'christmas/addExchange.js' |as_js }}
+<!-- 百度统计start -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?4d0c962b688eb374c3f0a499db3087a4";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+<!-- 百度统计end -->
 </body>
 </html>
