--- a/stucampus/templates/christmas/read.html
+++ b/stucampus/templates/christmas/read.html
@@ -124,5 +124,16 @@ lang=EN-US>&nbsp; </span>日期：<span lang=EN-US>XXXX</span></span></p>
         {% csrf_token %}
         <input type="submit" value="我已阅读并同意">
     </form>
+<!-- 百度统计start -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?4d0c962b688eb374c3f0a499db3087a4";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+<!-- 百度统计end -->
 </body>
 </html>
