--- a/stucampus/templates/christmas/index.html
+++ b/stucampus/templates/christmas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>Title</title>
+    <title>圣诞礼物在哪儿--学子天地</title>
     {% load html_tools %}
     {{ 'christmas/weui.css' | as_css }}
     {{ 'christmas/index.css' | as_css }}
