--- a/stucampus/templates/christmas/addGiven.html
+++ b/stucampus/templates/christmas/addGiven.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>Title</title>
+    <title>添加礼物</title>
     {% load html_tools %}
     {{ 'christmas/weui.style.css' | as_css }}
     {{ 'christmas/weui.css' | as_css }}
