fix the read.html error

--- a/stucampus/templates/christmas/read.html
+++ b/stucampus/templates/christmas/read.html
@@ -111,13 +111,12 @@ lang=EN-US>12</span>月<span lang=EN-US>22</span>日以前，过期不候。</sp
 
 <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>&nbsp;&nbsp;&nbsp;
 
-</span><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>声明单位：学子天地</span></p>
+</span><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>声明单位：深圳大学学子天地</span></p>
 
 
 
 <p class=MsoNormal><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>　<span
-
-lang=EN-US>&nbsp; </span>日期：<span lang=EN-US>XXXX</span></span></p>
+lang=EN-US>&nbsp; </span>日期：<span lang=EN-US></span>2016-12-08</span></p>
 
 
     <form action="" method="POST">
