优化免责声明页面

--- a/stucampus/templates/christmas/read.html
+++ b/stucampus/templates/christmas/read.html
@@ -3,126 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>免责声明</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    {% load html_tools %}
+    {{ 'christmas/weui.style.css' | as_css }}
+    {{ 'christmas/weui.css' | as_css }}
 </head>
 <body>
-    <p class=MsoNormal align=left style='text-align:left'><b><span
-
-style='font-size:14.0pt;font-family:"微软雅黑","sans-serif"'>免责说明</span></b></p>
-
-
-
-<p class=MsoNormal><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>学子天地将于<span
-
-lang=EN-US>12.8~12.22</span>举办“圣诞节礼物交换活动”。活动过程中，学子天地作为活动主办方，为了避免不必要的纠纷，特做如下说明：</span></p>
-
-
-
-<h2 style='margin-left:0cm;text-indent:0cm;line-height:172%'><span lang=EN-US
-
-style='font-size:12.0pt;line-height:172%;font-family:"微软雅黑","sans-serif"'>1.</span><span
-
-style='font-size:12.0pt;line-height:172%;font-family:"微软雅黑","sans-serif"'>礼物要求</span></h2>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>1.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>选择以方式一参与活动的同学，准备的礼物价格应在<span
-
-lang=EN-US>10~500</span>元之间（自制的创意作品除外）；</span></p>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>2.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>选择以方式二参与活动的同学，准备的礼物价格应在<span
-
-lang=EN-US>2000</span>元以下；</span></p>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>3.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>礼物的重量不得超过<span
-
-lang=EN-US>10</span>公斤；</span></p>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>4.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>易碎品、短保质期食品、各种国家明令禁止的违禁品我们拒绝接收，请多多包涵；</span></p>
-
-
-
-<h2 style='margin-left:0cm;text-indent:0cm;line-height:172%'><span lang=EN-US
-
-style='font-size:12.0pt;line-height:172%;font-family:"微软雅黑","sans-serif"'>2.</span><span
-
-style='font-size:12.0pt;line-height:172%;font-family:"微软雅黑","sans-serif"'>注意事项</span></h2>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>1.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>活动当天请务必携带校园卡来到活动地点寄出你的礼物，否则无论礼物是什么我们一概拒收；</span></p>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>2.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>寄出礼物前请务必自行检查好礼物的完整性，否则因寄出问题礼物而造成的不良影响，学子天地概不负责；</span></p>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>3.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>学子天地对运输过程中的货物毁损、灭失承担损害赔偿责任，但学子天地若能证明货物的毁灭、灭失是因不可抗力、货物本身的自然性质或者合理损耗以及托运人、收货人的过错造成，不承担损害赔偿责任；</span></p>
-
-
-
-<p class=MsoNormal style='margin-left:0cm;text-indent:0cm'><span lang=EN-US
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>4.</span><span
-
-style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>选择方式一参与活动的同学在收到领取礼物的编号后请及时到相应的活动地点领取礼物，即<span
-
-lang=EN-US>12</span>月<span lang=EN-US>22</span>日以前，过期不候。</span></p>
-
-
-
-<p class=MsoNormal><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>　　特此声明！</span></p>
-
-
-
-<p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>&nbsp;&nbsp;&nbsp;
-
-</span><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>声明单位：深圳大学学子天地</span></p>
-
-
-
-<p class=MsoNormal><span style='font-size:12.0pt;font-family:"微软雅黑","sans-serif"'>　<span
-lang=EN-US>&nbsp; </span>日期：<span lang=EN-US></span>2016-12-08</span></p>
-
-
-    <form action="" method="POST">
-        {% csrf_token %}
-        <input type="submit" value="我已阅读并同意">
-    </form>
+<div class="weui-msg">
+        <div class="weui-msg__icon-area"><i class="weui-icon-warn weui-icon_msg"></i></div>
+        <div class="weui-msg__text-area">
+            <h2 class="weui-msg__title">注意</h2>
+            <p class="weui-msg__desc">内您需要先阅读<a href="/christmas/readDetail/">免责声明</a></p>
+        </div>
+        <div class="weui-msg__opr-area">
+            <p class="weui-btn-area">
+                <form action="" method="POST">
+                    {% csrf_token %}
+                    <input type="submit" value="我已阅读并同意" class="weui-btn weui-btn_primary">
+                </form>
+            </p>
+        </div>
+ </div>
 <!-- 百度统计start -->
 <script>
     var _hmt = _hmt || [];
