--- a/stucampus/templates/christmas/read.html
+++ b/stucampus/templates/christmas/read.html
@@ -13,7 +13,7 @@
         <div class="weui-msg__icon-area"><i class="weui-icon-warn weui-icon_msg"></i></div>
         <div class="weui-msg__text-area">
             <h2 class="weui-msg__title">注意</h2>
-            <p class="weui-msg__desc">内您需要先阅读<a href="/christmas/readDetail/">免责声明</a></p>
+            <p class="weui-msg__desc">您需要先阅读<a href="/christmas/readDetail/">免责声明</a></p>
         </div>
         <div class="weui-msg__opr-area">
             <p class="weui-btn-area">
