添加回忘记添加的as_css

--- a/stucampus/templates/christmas/error.html
+++ b/stucampus/templates/christmas/error.html
@@ -5,8 +5,8 @@
     <title>错误</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     {% load html_tools %}
-    {{ 'christmas/weui.css' }}
-    {{ 'christmas/weui.style.css' }}
+    {{ 'christmas/weui.css' | as_css }}
+    {{ 'christmas/weui.style.css' | as_css }}
 </head>
 <body>
     <div class="weui-msg">
